docs: add detailed README with setup and usage instructions

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 PORT=5000
 MONGO_URI=<MongoDbURI>
+GOOGLE_CLIENT_ID=<GoogleClientId>
+GOOGLE_CLIENT_SECRET=<GoogleClientSecret>
+GOOGLE_REDIRECT=http://localhost:5000/auth/google/callback
+FRONTEND_REDIRECT_URL=http://localhost:3000/login/callback
+JWT_SECRET=<JwtSecretkey>
+STRIPE_SECRET=<StripeSecret>
+STRIPE_WEBHOOK_SECRET=<StripeWebhookSecret>
